--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,10 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url 'https://maven.fabric.io/public' }
-    }
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
-
 
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
-
-
-repositories {
-    maven { url 'https://maven.fabric.io/public' }
-}
 
 
 android {
@@ -44,6 +33,7 @@ android {
 
     lintOptions {
         warning 'MissingTranslation'
+        disable 'InvalidPackage'
     }
 }
 
@@ -58,7 +48,7 @@ gradle.projectsEvaluated {
 dependencies {
     compile 'com.github.brnunes:swipeablerecyclerview:1.0.1'
     compile 'com.android.support:cardview-v7:22.2.0'
-    compile('com.google.android.gms:play-services-gcm:7.3.0') {
+    compile('com.google.android.gms:play-services-gcm:7.5.0') {
 		exclude group: 'com.android.support'
 	}
     compile('com.google.android.gms:play-services-analytics:7.5.0') {
@@ -87,10 +77,9 @@ dependencies {
     compile 'org.slf4j:slf4j-android:1.7.12'
     compile 'com.github.satyan:sugar:1.3.1'
     compile 'com.androidplot:androidplot-core:0.6.1'
-    compile('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
-        transitive = true;
+    compile ('org.roboguice:roboguice:3.0.1') {
+        exclude group: 'com.google.inject.Scopes.3'
     }
-    compile 'org.roboguice:roboguice:3.0.1'
     provided 'org.roboguice:roboblender:3.0.1'
 
 }
